<resources>
    <string name="app_name">MoviesHomeworkApp</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_13">13+</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="titleName">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movies_list">Movies list</string>
    <string name="ageNumber">13+</string>
    <string name="avengers_end_game_list">Avengers: End Game</string>
    <string name="_137_min">137 min</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="icon_like">icon like</string>
    <string name="five_star">five star</string>
    <string name="four_star">four star</string>
    <string name="icon_movies_list">icon movies list</string>
    <string name="first_star">first star</string>
    <string name="second_star">second star</string>
    <string name="third_star">third star</string>
    <string name="movie_poster">movie poster</string>
    <string name="movie_poster_fade">movie poster fade</string>
    <string name="movie_poster_in_details">movie poster in details</string>
    <string name="first_star_in_details">first star in details</string>
    <string name="second_star_in_details">second star in details</string>
    <string name="third_star_in_details">third star in details</string>
    <string name="four_star_in_details">four star in details</string>
    <string name="five_star_in_details">five star in details</string>
</resources>