<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="MoviesDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tvMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster_in_details"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/avengers_end_game"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMoviePoster" />

        <TextView
            android:id="@+id/tvMovieGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/genres"
            android:textSize="@dimen/tv_textSize_max"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

        <TextView
            android:id="@+id/tvAgeAudience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_indentation_min"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textSize_min"
            app:layout_constraintBottom_toBottomOf="@+id/tvMoviePoster"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <ImageView
            android:id="@+id/tvFirstStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_indentation_min"
            android:contentDescription="@string/first_star_in_details"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <ImageView
            android:id="@+id/tvSecondStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_indentation_min"
            android:contentDescription="@string/second_star_in_details"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/tvFirstStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <ImageView
            android:id="@+id/tvThirdStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_indentation_min"
            android:contentDescription="@string/third_star_in_details"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/tvSecondStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <ImageView
            android:id="@+id/tvFourStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_indentation_min"
            android:contentDescription="@string/four_star_in_details"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/tvThirdStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <ImageView
            android:id="@+id/tvFiveStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_indentation_min"
            android:contentDescription="@string/five_star_in_details"
            android:src="@drawable/ic_star_icon_grey"
            app:layout_constraintStart_toEndOf="@+id/tvFourStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tv_textSize_min"
            android:layout_marginTop="@dimen/top_indentation_actors"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_125_reviews"
            android:textColor="@color/greyReviews"
            android:textSize="@dimen/tv_textSize_max"
            app:layout_constraintStart_toEndOf="@+id/tvFiveStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/my_value"
            android:layout_marginTop="@dimen/top_indentation_castAndStoryline"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textSize_max"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReviews" />

        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="@dimen/zer0_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value"
            android:fontFamily="@font/roboto_light"
            android:text="@string/titleName"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textSize_max"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvCast"
            android:layout_width="@dimen/zer0_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_indentation_castAndStoryline"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textSize_max"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCast"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/view_holder_actors"
            tools:itemCount="4"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvCast" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_back"
            android:layout_marginTop="@dimen/top_indentation_back"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/tvMoviePoster" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/my_value" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/my_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>