<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background=" #191926"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/tvMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/avengers_end_game"
            android:textColor="#ECECEC"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMoviePoster" />

        <TextView
            android:id="@+id/tvMovieGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_adventure_fantasy"
            android:textColor="#FF3466"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

        <TextView
            android:id="@+id/tvAgeAudience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_13"
            android:textColor="#FFFFFF"
            android:textSize="12sp"

            app:layout_constraintBottom_toBottomOf="@+id/tvMoviePoster"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <ImageView
            android:id="@+id/tvFirstStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <ImageView
            android:id="@+id/tvSecondStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/tvFirstStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <ImageView
            android:id="@+id/tvThirdStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/tvSecondStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <ImageView
            android:id="@+id/tvFourStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/tvThirdStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <ImageView
            android:id="@+id/tvFiveStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon_grey"
            app:layout_constraintStart_toEndOf="@+id/tvFourStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:text="@string/_125_reviews"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tvFiveStar"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/storyline"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReviews" />

        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe."
            android:textColor="#ECECEC"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDescription" />


        <ImageView
            android:id="@+id/tvRobert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/movie_3"
            app:layout_constraintEnd_toStartOf="@+id/tvChris"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCast" />

        <ImageView
            android:id="@+id/tvChris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"

            android:src="@drawable/movie_2"
            app:layout_constraintEnd_toStartOf="@+id/tvMark"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvRobert"
            app:layout_constraintTop_toBottomOf="@+id/tvCast" />

        <ImageView
            android:id="@+id/tvMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/movie_1"
            app:layout_constraintEnd_toStartOf="@+id/tvHemsworth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvChris"
            app:layout_constraintTop_toBottomOf="@+id/tvCast" />

        <ImageView
            android:id="@+id/tvHemsworth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvMark"
            app:layout_constraintTop_toBottomOf="@+id/tvCast" />

        <TextView
            android:id="@+id/textRobertDowney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tvRobert"
            app:layout_constraintStart_toStartOf="@id/tvRobert"
            app:layout_constraintTop_toBottomOf="@+id/tvRobert" />

        <TextView
            android:id="@+id/textChrisEvans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/chris_evans"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tvChris"
            app:layout_constraintStart_toStartOf="@+id/tvChris"
            app:layout_constraintTop_toBottomOf="@+id/tvChris" />

        <TextView
            android:id="@+id/textMarkRuffalo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="@+id/tvMark"
            app:layout_constraintStart_toStartOf="@+id/tvMark"
            app:layout_constraintTop_toBottomOf="@+id/tvMark"  />

        <TextView
            android:id="@+id/textChrisHemsworth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="@+id/tvHemsworth"
            app:layout_constraintStart_toStartOf="@+id/tvHemsworth"
            app:layout_constraintTop_toBottomOf="@+id/tvHemsworth"  />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/tvMoviePoster" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>